fixed contact page header flex alignment + updated readme to include contact page info

--- a/css/contact.css
+++ b/css/contact.css
@@ -7,8 +7,14 @@ main {
 }
 
 main h1 {
-    font-size: clamp(2rem, 5vw, 5rem);
+    font-size: clamp(1.8rem, 5vw, 5rem);
     font-family: Satoshi-Medium;
+    margin:0;
+}
+
+.right-align {
+    text-align: right;
+    padding-right: 10%;
 }
 
 .form-container {
